Fixes y not showing properly mobile, overflow visible

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -281,6 +281,7 @@ select {
   font-weight: 400;
   color: grey;
   font-weight: normal;
+  overflow: visible;
 }
 
 .custom-button {
